--- a/19033684 Kumar Pulami/19033684 Kumar Pulami.csproj
+++ b/19033684 Kumar Pulami/19033684 Kumar Pulami.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Folder Include="Models\DatabaseModel\Student\" />
     <Folder Include="Models\DatabaseModel\Teacher\" />
+    <Folder Include="Models\ViewModel\Exam\Marks Entry\PostBack\" />
   </ItemGroup>
 
   <ItemGroup>
