--- a/19033684 Kumar Pulami/19033684 Kumar Pulami.csproj
+++ b/19033684 Kumar Pulami/19033684 Kumar Pulami.csproj
@@ -10,12 +10,13 @@
   <ItemGroup>
     <Folder Include="Models\DatabaseModel\Student\" />
     <Folder Include="Models\DatabaseModel\Teacher\" />
-    <Folder Include="Models\ViewModel\Exam\Marks Entry\PostBack\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
