Database Script Update

--- a/19033684 Kumar Pulami/appsettings.json
+++ b/19033684 Kumar Pulami/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "myConnection": "Data Source=ASUS\\SQLEXPRESS;Initial Catalog=StudentManagementSystem;Integrated Security=True;"
+    "myConnection": "Data Source=DESKTOP-2L51P64\\SQLSERVER;Initial Catalog=StudentManagementSystem;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
